Fixed Antler_Server as npm project

--- a/Antler_WebApp/index.html
+++ b/Antler_WebApp/index.html
@@ -14,7 +14,7 @@
 
 
 <header>
-    <img id="header-logo" src="./assets/images/Logo.png" alt="logo">
+    <img id="header-logo" src="./assets/logo" alt="logo">
     <span id="header-title">Antler</span>
     <button class ="button" id="btnRefresh" onclick="refresh()"> Refresh </button>
 </header>
